# protobuf-editor

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: schema1.proto  schema2.proto  schema3.proto
imgui/: CMakeLists.txt
protobuf-editor/: CMakeLists.txt  file.cpp  file.h  imgui_includes.h  log.h  main.cpp  proto.cpp  proto.h  protobuf_editor.cpp  protobuf_editor.h  protobuf_include.h  schema.proto  string.cpp  string.h  system.cpp  system.h
your_schema/: CMakeLists.txt  schema.pb.cc  schema.pb.h
